<resources>
    <string name="app_name">Lab 6</string>
    <string name="hello_message">Hello World!</string>
    <string name="title">Look at my GUI</string>
    <string name="button">CLICK HERE</string>
    <string name="check">Check this out!</string>
    <string name="switch1">Switch on / off</string>
    <string name="textHint">Type here</string>

    <string name="toast_message">Here is more information</string>
    <string name="preference_file_key" />

    <string name="email">Enter your email:</string>
    <string name="emailEdit"></string>
    <string name="password">Enter your password:</string>
    <string name="passwordEdit"></string>
    <string name="login">Login</string>

    <string name="profileName">Your name:</string>
    <string name="profileNameHint">Enter your name</string>
    <string name="profile">Your profile</string>
    <string name="profileEmail">Your email:</string>
    <string name="profileEmailHint">Enter your email</string>
    <string name="profilePicture">Your profile picture:</string>
    <string name="profilePictureCaption">Click the button above to take a picture</string>

    <string name="enterChat">Go to chat</string>
    <string name="AlertDialogTitle">Do you want to delete this?</string>
    <string name="AlertDialog1">The selected row is: </string>
    <string name="AlertDialog2">The database id is: </string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="chatMessage">Type here</string>
    <string name="sendButton">Send</string>
    <string name="receiveButton">Receive</string>

    <string name="Weather">Weather</string>
    <string name="currentTemp">Current Temperature:</string>
    <string name="minTemp">Minimum Temperature:</string>
    <string name="maxTemp">Maximum Temperature:</string>
    <string name="uvIndex">UV Index:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hide">Hide</string>


</resources>
