<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:text="@string/title"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="202dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:layout_marginTop="0dp"
        android:onClick="displayToastMsg"
        android:text="@string/button"
        android:textAlignment="center" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@id/button"
        android:onClick="checkBoxSnackbar"
        android:orientation="horizontal"
        android:text="@string/check" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button"
        android:background="@drawable/flag" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@id/button"
        android:onClick="switchSnackbar"
        android:text="@string/switch1" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:ems="10"
        android:hint="@string/textHint"
        android:inputType="textPersonName"
        android:text="" />
</RelativeLayout>